Finally fixed menu align issues

--- a/index.css
+++ b/index.css
@@ -16,84 +16,72 @@
   --lightOrange: rgb(253, 207, 153);
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-  
+body::-webkit-scrollbar {
+  width: 1.5em;
+  height: 1.5em;
 }
 
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background: var(--lightOrange);
+  border-radius: 100vw;
+  margin-block: .5em;
+  margin-inline: .5em;
 }
 
-::-webkit-scrollbar-thumb {
-  background: white;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
+body::-webkit-scrollbar-thumb {
   background: var(--darkOrange);
+  border: .4em solid var(--lightOrange);
+  border-radius: 100vw;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  border: 0;
 }
 
 body {
   background-color: var(--lightOrange);
   height: 300vh;
-
 }
 
 #title{
   display: flex;
-  justify-content: space-between;
-  flex-direction: column-reverse;
+  justify-content: center;
+  flex-direction: row;
   align-items: center;
-  align-content: space-around;
-  flex-wrap: nowrap;
-  padding-left: 50px;
-  padding-right: 50px;
 
   font-family: "Compacta Bold";
   font-size: 150px;
-  text-decoration: underline 5px var(--darkOrange);
-  text-underline-offset: 5px;
 }
 
 .menu {
   display: flex;
-  position: fixed;
   flex-direction: column;
   justify-content: center;
-  height: 75%;
+  position: fixed;
+  top: 0;
+  height: 100vh;
   z-index: 1;
 }
 
 .menucontent {
-  font-family: "Compacta Bold"; 
+  width: 225px;
   font-size: 50px;
   text-align: left;
+  font-family: "Compacta Bold"; 
   
-  width: 225px;
   background-color: var(--lightOrange);
-  
   border-style: hidden solid hidden hidden;
   border-color: var(--darkOrange);
   border-width: 5px;
   padding-top: 50px;
   padding-bottom: 50px;
 
-  margin-top: 5px;
-  margin-bottom: 5px;
-  
-  position: relative;
   cursor: pointer;
   transition: all ease-in 100ms;
 }
 
-.menu:hover{
-  height: 75%;
-}
-
 .menucontent:hover {
   width: 300px;
-  height: 225px;
   font-size: 70px;
 }
 
